// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse function should collapse a tree such as specified in RFC002 example 1`] = `
TBlock {
  "attributes": Object {
    "href": "https://domain.com",
  },
  "children": Array [
    TPhrasingAnchor {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "This is ",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "phrasing content",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "span",
          "type": "text",
        },
      ],
      "className": null,
      "displayName": "TPhrasingAnchor",
      "hasWhiteSpaceCollapsingEnabled": true,
      "href": "https://domain.com",
      "id": null,
      "isAnchor": true,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlockAnchor {
      "attributes": Object {
        "src": "https://domain.com/logo.jpg",
      },
      "children": Array [],
      "className": null,
      "displayName": "TBlockAnchor",
      "hasWhiteSpaceCollapsingEnabled": true,
      "href": "https://domain.com",
      "id": null,
      "isAnchor": true,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "img",
      "type": "block",
    },
    TPhrasingAnchor {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "and this is ",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "too",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "strong",
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": ".",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "className": null,
      "displayName": "TPhrasingAnchor",
      "hasWhiteSpaceCollapsingEnabled": true,
      "href": "https://domain.com",
      "id": null,
      "isAnchor": true,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
  ],
  "className": null,
  "displayName": "TBlock",
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "isAnchor": false,
  "parentStyles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "a",
  "type": "block",
}
`;

exports[`collapse function should handle deeply nested HTML 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "First implicit paragraph.",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "className": null,
      "displayName": "TPhrasing",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "className": null,
              "data": "Second implicit paragraph",
              "displayName": "TText",
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "isAnchor": false,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
          ],
          "className": null,
          "displayName": "TPhrasing",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
        TBlock {
          "attributes": Object {},
          "children": Array [
            TPhrasing {
              "attributes": Object {},
              "children": Array [
                TText {
                  "attributes": Object {},
                  "children": Array [],
                  "className": null,
                  "data": "A new paragraph.",
                  "displayName": "TText",
                  "hasWhiteSpaceCollapsingEnabled": true,
                  "id": null,
                  "isAnchor": false,
                  "parentStyles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "styles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "tagName": null,
                  "type": "text",
                },
                TText {
                  "attributes": Object {},
                  "children": Array [],
                  "className": null,
                  "data": " And a span within",
                  "displayName": "TText",
                  "hasWhiteSpaceCollapsingEnabled": true,
                  "id": null,
                  "isAnchor": false,
                  "parentStyles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "styles": TStyles {
                    "nativeBlockFlow": Object {},
                    "nativeBlockRet": Object {},
                    "nativeTextFlow": Object {},
                    "nativeTextRet": Object {},
                    "webTextFlow": Object {},
                  },
                  "tagName": "span",
                  "type": "text",
                },
              ],
              "className": null,
              "displayName": "TPhrasing",
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "isAnchor": false,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "phrasing",
            },
            TBlock {
              "attributes": Object {
                "src": "https://domain.com/logo.jpg",
              },
              "children": Array [],
              "className": null,
              "displayName": "TBlock",
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "isAnchor": false,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": "img",
              "type": "block",
            },
          ],
          "className": null,
          "displayName": "TBlock",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "p",
          "type": "block",
        },
      ],
      "className": null,
      "displayName": "TBlock",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "div",
      "type": "block",
    },
  ],
  "className": null,
  "displayName": "TBlock",
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "isAnchor": false,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "article",
  "type": "block",
}
`;

exports[`collapse function should handle direct style inheritance 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "This is nice!",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {
              "borderBottomWidth": 20,
              "borderLeftWidth": 20,
              "borderRightWidth": 20,
              "borderTopWidth": 20,
            },
            "nativeTextFlow": Object {
              "fontSize": 18,
            },
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {
              "color": "red",
              "fontSize": 18,
            },
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "span",
          "type": "text",
        },
      ],
      "className": null,
      "displayName": "TPhrasing",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {
          "borderBottomWidth": 20,
          "borderLeftWidth": 20,
          "borderRightWidth": 20,
          "borderTopWidth": 20,
        },
        "nativeTextFlow": Object {
          "fontSize": 18,
        },
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {
          "fontSize": 18,
        },
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
  ],
  "className": null,
  "displayName": "TBlock",
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "isAnchor": false,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {
      "borderBottomWidth": 20,
      "borderLeftWidth": 20,
      "borderRightWidth": 20,
      "borderTopWidth": 20,
    },
    "nativeTextFlow": Object {
      "fontSize": 18,
    },
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "div",
  "type": "block",
}
`;

exports[`collapse function should handle indirect style inheritance 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "className": null,
              "data": "This is great!",
              "displayName": "TText",
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "isAnchor": false,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {
                  "borderBottomWidth": 20,
                  "borderLeftWidth": 20,
                  "borderRightWidth": 20,
                  "borderTopWidth": 20,
                },
                "nativeTextFlow": Object {
                  "fontSize": 18,
                },
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {
                  "fontSize": 18,
                },
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
          ],
          "className": null,
          "displayName": "TPhrasing",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {
              "borderBottomWidth": 20,
              "borderLeftWidth": 20,
              "borderRightWidth": 20,
              "borderTopWidth": 20,
            },
            "nativeTextFlow": Object {
              "fontSize": 18,
            },
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {
              "fontSize": 18,
            },
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
      ],
      "className": null,
      "displayName": "TBlock",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {
          "fontSize": 18,
        },
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {
          "borderBottomWidth": 20,
          "borderLeftWidth": 20,
          "borderRightWidth": 20,
          "borderTopWidth": 20,
        },
        "nativeTextFlow": Object {
          "fontSize": 18,
        },
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "div",
      "type": "block",
    },
  ],
  "className": null,
  "displayName": "TBlock",
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "isAnchor": false,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {
      "fontSize": 18,
    },
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "div",
  "type": "block",
}
`;

exports[`collapse function should handle nested anchors 1`] = `
TPhrasingAnchor {
  "attributes": Object {
    "href": "https://domain.com",
  },
  "children": Array [
    TText {
      "attributes": Object {},
      "children": Array [],
      "className": null,
      "data": "This is ",
      "displayName": "TText",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "text",
    },
    TText {
      "attributes": Object {},
      "children": Array [],
      "className": null,
      "data": "phrasing content",
      "displayName": "TText",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "span",
      "type": "text",
    },
    TText {
      "attributes": Object {},
      "children": Array [],
      "className": null,
      "data": " ",
      "displayName": "TText",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "text",
    },
    TPhrasingAnchor {
      "attributes": Object {
        "href": "https://sub.domain.com",
      },
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "and this is ",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "too",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "strong",
          "type": "text",
        },
      ],
      "className": null,
      "displayName": "TPhrasingAnchor",
      "hasWhiteSpaceCollapsingEnabled": true,
      "href": "https://sub.domain.com",
      "id": null,
      "isAnchor": true,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "a",
      "type": "phrasing",
    },
  ],
  "className": null,
  "displayName": "TPhrasingAnchor",
  "hasWhiteSpaceCollapsingEnabled": true,
  "href": "https://domain.com",
  "id": null,
  "isAnchor": true,
  "parentStyles": null,
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "a",
  "type": "phrasing",
}
`;

exports[`collapse function should hoist blocks recursively 1`] = `
TBlock {
  "attributes": Object {},
  "children": Array [
    TPhrasing {
      "attributes": Object {},
      "children": Array [
        TText {
          "attributes": Object {},
          "children": Array [],
          "className": null,
          "data": "Line1",
          "displayName": "TText",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "text",
        },
      ],
      "className": null,
      "displayName": "TPhrasing",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": null,
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": null,
      "type": "phrasing",
    },
    TBlock {
      "attributes": Object {},
      "children": Array [
        TPhrasing {
          "attributes": Object {},
          "children": Array [
            TText {
              "attributes": Object {},
              "children": Array [],
              "className": null,
              "data": "Line2",
              "displayName": "TText",
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "isAnchor": false,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": null,
              "type": "text",
            },
            TText {
              "attributes": Object {},
              "children": Array [],
              "className": null,
              "data": " Line3",
              "displayName": "TText",
              "hasWhiteSpaceCollapsingEnabled": true,
              "id": null,
              "isAnchor": false,
              "parentStyles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "styles": TStyles {
                "nativeBlockFlow": Object {},
                "nativeBlockRet": Object {},
                "nativeTextFlow": Object {},
                "nativeTextRet": Object {},
                "webTextFlow": Object {},
              },
              "tagName": "span",
              "type": "text",
            },
          ],
          "className": null,
          "displayName": "TPhrasing",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": null,
          "type": "phrasing",
        },
        TBlock {
          "attributes": Object {
            "src": "https://domain.com/logo.jpg",
          },
          "children": Array [],
          "className": null,
          "displayName": "TBlock",
          "hasWhiteSpaceCollapsingEnabled": true,
          "id": null,
          "isAnchor": false,
          "parentStyles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "styles": TStyles {
            "nativeBlockFlow": Object {},
            "nativeBlockRet": Object {},
            "nativeTextFlow": Object {},
            "nativeTextRet": Object {},
            "webTextFlow": Object {},
          },
          "tagName": "img",
          "type": "block",
        },
      ],
      "className": null,
      "displayName": "TBlock",
      "hasWhiteSpaceCollapsingEnabled": true,
      "id": null,
      "isAnchor": false,
      "parentStyles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "styles": TStyles {
        "nativeBlockFlow": Object {},
        "nativeBlockRet": Object {},
        "nativeTextFlow": Object {},
        "nativeTextRet": Object {},
        "webTextFlow": Object {},
      },
      "tagName": "strong",
      "type": "block",
    },
  ],
  "className": null,
  "displayName": "TBlock",
  "hasWhiteSpaceCollapsingEnabled": true,
  "id": null,
  "isAnchor": false,
  "parentStyles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "styles": TStyles {
    "nativeBlockFlow": Object {},
    "nativeBlockRet": Object {},
    "nativeTextFlow": Object {},
    "nativeTextRet": Object {},
    "webTextFlow": Object {},
  },
  "tagName": "span",
  "type": "block",
}
`;
